# kamp-daemon

./: .gitignore  .release-please-manifest.json  BACKLOG.md  CHANGELOG.md  LICENSES.md  README.md  TEST_PLAN_0.17.0.md  USAGE.md  _kamp_entry.py  claude.md  coverage.json  kamp.spec  package-lock.json  pyproject.toml  release-please-config.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: build-app.yml  ci.yml  codeql.yml  publish-kamp-groover.yml  release-please.yml  release.yml
Formula/: kamp-daemon.rb  kamp.rb  tune-shifter.rb
backlog/: config.yml
backlog/completed/: task-1 - bug-kamp-UI-cant-find-server-after-computer-sleeps.md  task-10 - Panel-layout-persistence-and-keyboard-shortcuts.md  task-139 - onboarding-flow-—-welcome-library-setup-watch-folder-bandcamp-and-almost-done-screens.md  task-149 - implement-shared-secret-token-authentication-for-the-HTTP-API.md  task-151 - migrate-Last.fm-session-key-from-config.toml-to-sessions-table.md  task-152 - add-explicit-path-containment-validation-for-file_path-API-parameters.md  task-162 - security-upgrade-vite-to-7.3.2-3-CVEs-—-file-read-fs.deny-bypass-map-path-traversal.md  task-163 - security-force-lodash-4.18.0-via-npm-overrides-2-CVEs-—-code-injection-prototype-pollution.md  task-164 - security-force-xmldom-xmldom-0.8.12-via-npm-overrides-XML-injection-via-CDATA.md  task-165 - stabilize-keychain-access-with-retry-backoff-for-background-daemon.md  task-166 - bandcamp-polling-option-updates-dont-apply-immediately.md  task-167 - eliminate-repeated-macOS-Keychain-access-dialogs-via-Data-Protection-Keychain.md  task-169 - dynamic-rotating-strings-in-onboarding-Almost-Done-screen.md  task-171 - Onboarding-exit-polish-All-set-string-and-delay-until-album-art-loads.md  task-24 - refine-Library-picker-needs-styling.md  task-25 - Library-scan-progress-UI.md  task-29 - redraw-issue-window-has-visible-white-gutters-while-shrinking.md  task-30 - Investigate-main-process-inflates-~50-MB-when-Bandcamp-sync-starts.md  task-37 - window-dimension-states-arent-serialized-deserialized-on-app-reload.md  task-4 - bug-macOS-menu-bar-reads-About-Tune-Shifter-instead-of-About-Kamp.md  task-41 - A-track-can-be-added-to-the-playback-queue.md  task-42 - an-album-can-be-added-to-the-playback-queue.md  task-5 - Automatic-library-watching.md  task-52 - UI-polish-remove-title-bar.md  task-53 - UI-polish-show-a-splash-screen-while-loading-the-application.md  task-54 - the-queue-can-be-rearranged.md  task-56 - double-clicking-on-a-track-in-the-queue-advances-the-queue-to-that-track.md  task-58 - filter-state-does-not-survive-app-restart.md  task-59 - the-currently-playing-item-is-static-read-only-in-the-queue.md  task-64 - Library-scan-progress-UI.md  task-7 - Now-Playing-view-artwork-centered-view-switching.md  task-76 - links-back-to-library-on-now-playing-screen.md  (+2 more)
completions/: _kamp  _kamp-daemon
development/: kamp.postman_collection.json
docs/: code-signing.md  development.md
hooks/: rthook_ssl_certifi.py
kamp_core/: __init__.py  deferred_ops.py  library.py  macos_keychain.py  media_controller.py  playback.py  scrobbler.py  server.py  win_credential.py
kamp_daemon/: __main__.py  acoustid.py  artwork.py  bandcamp.py  config.py  daemon_core.py  extractor.py  menu_bar.py  mover.py  pipeline.py  pipeline_impl.py  syncer.py  tagger.py  watcher.py
kamp_ui/: electron-builder.yml  eslint.config.mjs  package-lock.json  package.json
kamp_ui/native/now-playing-helper-win/: Cargo.toml  rust-toolchain.toml
kamp_ui/native/now-playing-helper-win/src/: main.rs
launcher/: main.c
project/: BACKLOG.md  design-lexicon.md  kampground-ideation.md  sandbox-profiles.md
scripts/: build_mpv_windows.ps1  encode_acoustid_key.py  profile_extensions.py  spike_bandcamp_http.py  spike_kamp372_stream.py  spike_kamp373_transport.py
tests/: test_acoustid.py  test_album_rename.py  test_artwork.py  test_bandcamp.py  test_builtin_bandcamp.py  test_config.py  test_config_monitor.py  test_cross_platform.py  test_daemon_core.py  test_deferred_ops.py  test_extension_context.py  test_extension_discovery.py  test_extension_invoker.py  test_extension_permissions.py  test_extension_pins.py  test_extension_probe.py  test_extension_sandbox_common.py  test_extension_sandbox_linux.py  test_extension_sandbox_macos.py  test_extension_types.py  test_extension_worker.py  test_extractor.py  test_library.py  test_library_write_log.py  test_macos_keychain.py  test_main.py  test_mb_lookup_endpoint.py  test_media_controller.py  test_mover.py  test_notifications.py  test_pipeline.py  test_pipeline_subprocess.py  test_playback.py  test_playback_threaded.py  test_resolve_mpv_binary.py  test_scrobbler.py  test_server.py  test_syncer.py  test_tag_edit.py  test_tagger.py  (+2 more)
tune_shifter/: __main__.py  artwork.py  bandcamp.py  config.py  daemon_core.py  extractor.py  menu_bar.py  mover.py  pipeline.py  pipeline_impl.py  syncer.py  tagger.py  watcher.py
(+345 files in other folders)
