[tool.poetry]
name = "kamp"
version = "1.2.0"
description = "Automated audio library ingest from Bandcamp downloads."
authors = []
packages = [{include = "kamp_daemon"}, {include = "kamp_core"}]
# USAGE.md is read by the Homebrew formula's caveats block; completions/ is
# installed by the Homebrew formula's zsh_completion.install call; launcher/main.c
# is compiled by the formula into the native binary. MANIFEST.in is ignored by
# poetry-core so all three must be declared here explicitly.
include = ["USAGE.md", "completions/_kamp", "launcher/main.c"]

[tool.poetry.dependencies]
python = ">=3.11"
watchdog = ">=4.0"
musicbrainzngs = ">=0.7"
mutagen = ">=1.47"
requests = ">=2.31"
Pillow = ">=10.0"
playwright = ">=1.44"
rumps = {version = ">=0.4", markers = "sys_platform == 'darwin'"}
setproctitle = ">=1.3"
fastapi = "^0.135.2"
uvicorn = {extras = ["standard"], version = "^0.42.0"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-mock = ">=3.12"
pytest-cov = ">=5.0"
mypy = ">=1.9"
black = ">=24.0"
types-requests = ">=2.31"
types-Pillow = ">=10.0"
httpx = "^0.28.1"

[tool.poetry.scripts]
kamp = "kamp_daemon.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=kamp_daemon --cov=kamp_core --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["kamp_daemon", "kamp_core"]
omit = [
    "kamp_daemon/__main__.py",
    "kamp_daemon/bandcamp.py",
    "kamp_daemon/menu_bar.py",
]

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
# musicbrainzngs ships no type stubs
module = ["musicbrainzngs", "musicbrainzngs.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# __main__ uses mutagen for _write_test_mp3 and subclasses rumps.App in _cmd_test_notify;
# setproctitle ships no stubs so import-not-found is suppressed here as well
module = ["kamp_daemon.__main__"]
disable_error_code = ["import-untyped", "import-not-found", "no-untyped-call", "attr-defined", "misc", "untyped-decorator"]

[[tool.mypy.overrides]]
# mutagen has partial stubs that don't cover ID3 frame classes, MP4 methods, or
# FLAC tag access (audio.tags is typed as VCFLACDict | MetadataBlock; the union
# causes false union-attr/index errors on the VCFLACDict branch we always use).
module = ["kamp_daemon.tagger", "kamp_daemon.mover", "kamp_daemon.artwork", "kamp_core.library", "tests.test_library"]
disable_error_code = ["no-untyped-call", "attr-defined", "unused-ignore", "union-attr", "index", "var-annotated", "assignment", "arg-type"]

[[tool.mypy.overrides]]
# rumps, AppKit, objc (PyObjC runtime), and setproctitle ship no type stubs
module = ["rumps", "rumps.*", "AppKit", "AppKit.*", "objc", "objc.*", "setproctitle"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# menu_bar subclasses rumps.App (typed Any), uses @rumps.timer (untyped decorator),
# and imports objc/AppKit inline inside methods for lazy PyObjC access
module = ["kamp_daemon.menu_bar"]
ignore_missing_imports = true
disable_error_code = ["misc", "untyped-decorator", "import-untyped"]

[[tool.mypy.overrides]]
# playwright ships no type stubs
module = [
    "playwright",
    "playwright.*",
    "kamp_daemon.bandcamp",
    "kamp_daemon.syncer",
]
ignore_missing_imports = true
disable_error_code = [
    "import-untyped", "no-untyped-call", "attr-defined",
    "unused-ignore", "var-annotated", "type-arg", "no-any-return",
]
